--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,7 +20,7 @@
             </div>
             <a class="dropdown-item" routerLink="/profile">My Profile <i
                 class="dropdown-item-icon ti-dashboard"></i></a>
-            <a class="dropdown-item" routerLink="/login">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
+            <a class="dropdown-item" (click)= "logout()">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
           </div>
         </li>
       </ul>
