--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -96,10 +96,6 @@
                   <div class="card-body">
                     <h4 class="card-title">Bio Data Registration</h4>
                     <form [formGroup] = "agentForm" (ngSubmit) = "onSubmit()" class="form-sample">
-                      <webcam [height]="500" [width]="500" [trigger]="triggerObservable" 
-                  (imageCapture)="handleImage($event)" *ngIf="showWebcam"
-                  [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
-                  (initError)="handleInitError($event)"></webcam>
                       <p class="card-description"> Personal information </p>
                       <div class="row mt-5">
                         <div class="col-md-6">
@@ -321,6 +317,13 @@
                                  &nbsp;
                               <button class="btn btn-secondary" color="basic" type="button" (click)="toggleWebcam()">{{ title }}</button>
                             </div>
+                            <div class="pt-1">
+                              <webcam [height]="500" [width]="500" [trigger]="triggerObservable" 
+                              (imageCapture)="handleImage($event)" *ngIf="showWebcam"
+                              [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
+                              (initError)="handleInitError($event)">
+                              </webcam>
+                            </div>
                             <div class="image-preview" *ngIf = "webcamImage">
                               <img
                               [src]="webcamImage.imageAsDataUrl"
@@ -335,7 +338,7 @@
                           <div class="form-group row">
                             <label class="col-sm-4">FingerPrint (left index)</label>
                             <div class="col-sm-8">
-                              <button class="btn btn-secondary" color="basic" type="button" (click)="toggleWebcam()">Capture</button>
+                              <button class="btn btn-secondary" color="basic" type="button">Capture</button>
                             </div>
                           </div>
                         </div>
@@ -345,7 +348,7 @@
                           <div class="form-group row">
                             <label class="col-sm-4">FingerPrint (left index)</label>
                             <div class="col-sm-8">
-                              <button class="btn btn-secondary" color="basic" type="button" (click)="toggleWebcam()">Capture</button>
+                              <button class="btn btn-secondary" color="basic" type="button">Capture</button>
                             </div>
                           </div>
                         </div>
