--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -336,17 +336,22 @@
                       <div class="row mt-3">
                         <div class="col-md-6">
                           <div class="form-group row">
-                            <label class="col-sm-4">FingerPrint (left index)</label>
+                            <label class="col-sm-4">FingerPrint (left thumb)</label>
                             <div class="col-sm-8">
-                              <button class="btn btn-secondary" color="basic" type="button">Capture</button>
+                              <button class="btn btn-secondary" color="basic" type="button" (click)="captureLeft()">Capture</button>
                             </div>
                           </div>
+                          <div class="image-preview" *ngIf = "showThumbImage">
+                              <img
+                              [src]="this.leftFingerImage"
+                              alt="agentForm.value.title">
+                            </div>
                         </div>
                       </div>
                       <div class="row mt-3">
                         <div class="col-md-6">
                           <div class="form-group row">
-                            <label class="col-sm-4">FingerPrint (left index)</label>
+                            <label class="col-sm-4">FingerPrint (right thumb)</label>
                             <div class="col-sm-8">
                               <button class="btn btn-secondary" color="basic" type="button">Capture</button>
                             </div>
