Added new pages and modified some

--- a/src/app/admin/edit-user/edit-user.component.html
+++ b/src/app/admin/edit-user/edit-user.component.html
@@ -55,21 +55,35 @@
 
             <li class="nav-item">
               <a class="nav-link" routerLink="/admin/add-agent">
-                <i class="menu-icon typcn typcn-th-large-outline"></i>
+                <i class="menu-icon typcn typcn-user-add"></i>
                 <span class="menu-title">Add Agent</span>
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" routerLink="/admin/view-agent">
-                <i class="menu-icon typcn typcn-th-large-outline"></i>
+                <i class="menu-icon typcn typcn-eye"></i>
                 <span class="menu-title">View Agents</span>
               </a>
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/add-exco">
+                <i class="menu-icon typcn typcn-user-outline"></i>
+                <span class="menu-title">Add Exco</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/excos">
+                <i class="menu-icon typcn typcn-eye-outline"></i>
+                <span class="menu-title">View Excos</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" routerLink="/admin/profile">
-                <i class="menu-icon typcn typcn-bell"></i>
+                <i class="menu-icon typcn typcn-user"></i>
                 <span class="menu-title">Profile</span>
               </a>
             </li>
