--- a/src/app/admin/view-excos/view-excos.component.html
+++ b/src/app/admin/view-excos/view-excos.component.html
@@ -61,7 +61,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" routerLink="/admin/view-agent">
+              <a class="nav-link" routerLink="/admin/view-agent">
                 <i class="menu-icon typcn typcn-eye"></i>
                 <span class="menu-title">View Agents</span>
               </a>
@@ -75,7 +75,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="/admin/excos">
+              <a class="nav-link active" routerLink="/admin/excos">
                 <i class="menu-icon typcn typcn-eye-outline"></i>
                 <span class="menu-title">View Excos</span>
               </a>
@@ -240,4 +240,4 @@
         <!-- main-panel ends -->
       </div>
       <!-- page-body-wrapper ends -->
-    </div>
+    </div><p>view-excos works!</p>
