--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,9 @@
 .paginate_button:hover{
 	background-color: #212329 !important;
 }
+.menu-icon{
+	display: block !important;
+}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
