--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -47,7 +47,7 @@
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/agent/dashboard">
-                <i class="menu-icon typcn typcn-document-text"></i>
+                <i class="menu-icon typcn typcn-home"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
             </li>
@@ -94,7 +94,28 @@
               <div class="col-12 grid-margin">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bio Data Registration</h4>
+                    <div>
+                      <h4 class="card-title mt-5 font-weight-bold">Fetch User</h4>
+                      <div class="row mt-5">
+                        <div class="col-md-6">
+                          <div class="form-group row">
+                            <label class="col-sm-3 col-form-label">Fingerprint ID</label>
+                            <div class="col-sm-9">
+                              <input [(ngModel)]="fingerprintID" type="text" class="form-control">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="form-group row">
+                            <label class="col-sm-3 col-form-label"></label>
+                            <div class="col-sm-9">
+                              <button class="btn btn-secondary" color="basic" type="button" (click)="toggleWebcam()">Find</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <h4 class="card-title mt-5 font-weight-bold">Bio Data Registration</h4>
                     <form [formGroup] = "agentForm" (ngSubmit) = "onSubmit()" class="form-sample">
                       <p class="card-description"> Personal information </p>
                       <div class="row mt-5">
@@ -102,7 +123,7 @@
                           <div class="form-group row">
                             <label class="col-sm-3 col-form-label">First Name</label>
                             <div class="col-sm-9">
-                              <input formControlName = "firstname" type="text" class="form-control">
+                              <input formControlName = "firstname" type="text" class="form-control" readonly>
                             </div>
                           </div>
                         </div>
@@ -110,7 +131,7 @@
                           <div class="form-group row">
                             <label class="col-sm-3 col-form-label">MIddle Name</label>
                             <div class="col-sm-9">
-                              <input formControlName = "middlename" type="text" class="form-control">
+                              <input formControlName = "middlename" type="text" class="form-control" readonly>
                             </div>
                           </div>
                         </div>
@@ -120,7 +141,7 @@
                           <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Surname</label>
                             <div class="col-sm-9">
-                              <input formControlName = "surname" type="text" class="form-control">
+                              <input formControlName = "surname" type="text" class="form-control" readonly>
                             </div>
                           </div>
                         </div>
@@ -329,37 +350,6 @@
                               [src]="webcamImage.imageAsDataUrl"
                               alt="agentForm.value.title">
                             </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="row mt-3">
-                        <div class="col-md-6">
-                          <div class="form-group row">
-                            <label class="col-sm-4">FingerPrint (left thumb)</label>
-                            <div class="col-sm-8">
-                              <button class="btn btn-secondary" color="basic" type="button" (click)="captureLeft()">Capture</button>
-                            </div>
-                          </div>
-                          <div class="image-preview" *ngIf = "showThumbImage">
-                              <img
-                              [src]="this.leftFingerImage"
-                              alt="agentForm.value.title">
-                            </div>
-                        </div>
-                      </div>
-                      <div class="row mt-3">
-                        <div class="col-md-6">
-                          <div class="form-group row">
-                            <label class="col-sm-4">FingerPrint (right thumb)</label>
-                            <div class="col-sm-8">
-                              <button class="btn btn-secondary" color="basic" type="button" (click)="captureRight()">Capture</button>
-                            </div>
-                          </div>
-                          <div class="image-preview" *ngIf = "showRightThumbImage">
-                              <img
-                              [src]="this.rightFingerImage"
-                              alt="agentForm.value.title">
                           </div>
                         </div>
                       </div>
