--- a/src/app/admin/add-agent/add-agent.component.html
+++ b/src/app/admin/add-agent/add-agent.component.html
@@ -84,6 +84,13 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" routerLink="/admin/verify">
+            <i class="menu-icon typcn typcn-tick"></i>
+            <span class="menu-title">Verify Account</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" routerLink="/admin/profile">
             <i class="menu-icon typcn typcn-user"></i>
             <span class="menu-title">Profile</span>
