--- a/src/app/admin/add-exco/add-exco.component.html
+++ b/src/app/admin/add-exco/add-exco.component.html
@@ -82,6 +82,13 @@
               <span class="menu-title">View Excos</span>
             </a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/admin/verify">
+              <i class="menu-icon typcn typcn-tick"></i>
+              <span class="menu-title">Verify Account</span>
+            </a>
+          </li>
   
           <li class="nav-item">
             <a class="nav-link" routerLink="/admin/profile">
