--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -82,6 +82,13 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/verify">
+                <i class="menu-icon typcn typcn-tick"></i>
+                <span class="menu-title">Verify Account</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" routerLink="/admin/profile">
                 <i class="menu-icon typcn typcn-user"></i>
                 <span class="menu-title">Profile</span>
@@ -99,7 +106,7 @@
               <div class="col-md-12">
                 <div class="row">
                   
-                  <div class="col-md-6 grid-margin stretch-card average-price-card">
+                  <div class="col-md-3 grid-margin stretch-card average-price-card">
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
@@ -115,7 +122,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-6 grid-margin stretch-card average-price-card">
+                  <div class="col-md-3 grid-margin stretch-card average-price-card">
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
