--- a/src/app/admin/view/view.component.html
+++ b/src/app/admin/view/view.component.html
@@ -82,6 +82,13 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/verify">
+                <i class="menu-icon typcn typcn-tick"></i>
+                <span class="menu-title">Verify Account</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" routerLink="/admin/profile">
                 <i class="menu-icon typcn typcn-profile"></i>
                 <span class="menu-title">Profile</span>
