--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -9,7 +9,7 @@
     <div class="mk-icon-sim"><img [src]="data?.image" style="width: 80px;
     height: 80px;
     border-radius: 50%;"></div>
-    <div class="credit-font credit-card-number">{{ data?.firstname }} {{data?.middlename.charAt(0)}}. {{data?.lastname}}</div>
+    <div class="credit-font credit-card-number">{{ data?.firstname }} {{data?.middlename?.charAt(0)}}. {{data?.lastname}}</div>
     <footer class="foot">
       <div class="clearfix">
         <!-- <div class="pull-left">
