--- a/src/app/admin/view-excos/view-excos.component.html
+++ b/src/app/admin/view-excos/view-excos.component.html
@@ -105,23 +105,6 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="row">
-                  
-                  <div class="col-md-6 grid-margin stretch-card average-price-card">
-                    <div class="card text-white">
-                      <div class="card-body">
-                        <div class="d-flex justify-content-between pb-2 align-items-center">
-                          <h2 class="font-weight-semibold mb-0">{{ counts?.userCount }}</h2>
-                          <div class="icon-holder">
-                            <i class="mdi mdi-briefcase-outline"></i>
-                          </div>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                          <h5 class="font-weight-semibold mb-0">Cards</h5>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
                   <div class="col-md-6 grid-margin stretch-card average-price-card">
                     <div class="card text-white">
                       <div class="card-body">
@@ -132,38 +115,18 @@
                           </div>
                         </div>
                         <div class="d-flex justify-content-between">
-                          <h5 class="font-weight-semibold mb-0">Agents</h5>
+                          <h5 class="font-weight-semibold mb-0">Excos</h5>
                         </div>
                       </div>
                     </div>
                   </div>
-
-                  <div class="modal fade" id="{{ user?.uniqueId }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngFor = "let user of users">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">ID Card</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <app-card [data]="user"></app-card>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
                   <div class="col-md-12 grid-margin">
                     <div class="card">
                       <div class="card-body">
                         <div class="d-flex justify-content-between">
-                          <h4 class="card-title mb-0">Agents</h4>
+                          <h4 class="card-title mb-0">Excos</h4>
                         </div>
-                        <p>Registered Agents</p>
+                        <p>Registered Excos</p>
 
                         <div class="row">
                           <button class="btn btn-secondary" (click)="exporter.exportTable('csv')">Csv</button> &nbsp;
@@ -210,10 +173,10 @@
                             <ng-container matColumnDef="Action">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                               <mat-cell *matCellDef="let row"> 
-                                <button class="btn badge {{row?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "onAccountStatus(row?._id)">
+                                <button class="btn badge {{row?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "openConfirmDialog(row?._id)">
                                     {{row?.is_active? 'Deactivate' : 'Activate'}}
                                   </button>
-                                  <button class="btn badge badge-danger" (click)="onDelete(row?._id)">Delete</button>
+                                  <button class="btn badge badge-danger" (click)="openConfirmationDialog(row?._id)">Delete</button>
                                 </mat-cell>
                             </ng-container>
 
