--- a/src/app/admin/view/view.component.html
+++ b/src/app/admin/view/view.component.html
@@ -212,8 +212,9 @@
                               <mat-cell *matCellDef="let row"> 
                                 <button class="btn badge {{row?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "openConfirmDialog(row?._id)">
                                     {{row?.is_active? 'Deactivate' : 'Activate'}}
-                                  </button>
-                                  <button class="btn badge badge-danger" (click)="openConfirmationDialog(row?._id)">Delete</button>
+                                </button>
+                                <a  class="btn btn-secondary" [routerLink]="['/admin/agent-user']" [state]=row?._id>View</a>&nbsp;
+                                <button class="btn badge badge-danger" (click)="openConfirmationDialog(row?._id)">Delete</button>
                                 </mat-cell>
                             </ng-container>
 
