--- a/src/app/admin/edit-user/edit-user.component.html
+++ b/src/app/admin/edit-user/edit-user.component.html
@@ -334,6 +334,9 @@
                     </div>
                   </div>
             </div>
+            <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+              <p style="color: white">Updating User Account.... </p>
+            </ngx-spinner>
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
