--- a/src/app/admin/add-agent/add-agent.component.html
+++ b/src/app/admin/add-agent/add-agent.component.html
@@ -147,6 +147,9 @@
 
           </div>
         </div>
+        <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+          <p style="color: white">Creating an Agent... </p>
+        </ngx-spinner>
       </div>
       <!-- content-wrapper ends -->
       <!-- partial:partials/_footer.html -->
