--- a/src/app/agent/agent-dashboard/agent-dashboard.component.html
+++ b/src/app/agent/agent-dashboard/agent-dashboard.component.html
@@ -130,7 +130,7 @@
                           <mat-label>Filter</mat-label>
                           <input matInput (keyup)="applyFilter($event)" placeholder="Eg. Name" #input>
                         </mat-form-field>
-                        <div class="example-container mat-elevation-z8">
+                        <div class="example-container mat-elevation-z8" >
 
                           <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
 
@@ -221,8 +221,12 @@
                   
                 </div>
               </div>
+              <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+                <p style="color: white">Please Wait. </p>
+              </ngx-spinner>
             </div>
           </div>
+          
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
