--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -109,7 +109,7 @@
                           <div class="form-group row">
                             <label class="col-sm-3 col-form-label"></label>
                             <div class="col-sm-9">
-                              <button class="btn btn-secondary" color="basic" type="button" (click)="fetchUser()">Find</button>
+                              <button class="btn btn-secondary" [class.spinner]="loading" color="basic" type="button" (click)="fetchUser()">Find</button>
                             </div>
                           </div>
                         </div>
@@ -367,6 +367,9 @@
 
             </div>
           </div>
+          <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+            <p style="color: white">Please Wait. </p>
+          </ngx-spinner>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
