--- a/src/app/exco/exco/exco.component.html
+++ b/src/app/exco/exco/exco.component.html
@@ -203,7 +203,7 @@
                               <button class="btn btn-secondary" data-toggle="modal" 
                                 [attr.data-target]="'#'+row.uniqueId">View
                               </button> &nbsp;
-                                <button class="btn badge {{row.approve? 'badge-success':'badge-danger'}}">{{row.approve? 'Approved' : 'Approve'}}</button>
+                                <button disabled class="btn badge {{row.approve? 'badge-success':'badge-danger'}}">{{row.approved? 'Approved' : 'Pending'}}</button>
                               </mat-cell>
                           </ng-container>
 
@@ -223,6 +223,9 @@
             </div>
           </div>
         </div>
+        <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+          <p style="color: white">Please Wait. </p>
+        </ngx-spinner>
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
