--- a/src/app/exco/validate/validate.component.html
+++ b/src/app/exco/validate/validate.component.html
@@ -102,7 +102,9 @@
                             </div>
                           </div>
                       </div>
-
+                      <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+                        <p style="color: white">Verifying... </p>
+                      </ngx-spinner>
                       <div class="col-md-12 grid-margin mt-5" *ngIf="user">
                         <div class="card">
                             <div class="card-body" #content id="demo">
