--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,6 +78,9 @@
                 </div>
               </div>
             </div>
+            <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+              <p style="color: white">Please wait... </p>
+            </ngx-spinner>
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
