--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+/* Bootstrap file reference */
+@import '~bootstrap/dist/css/bootstrap.min.css'; 
+
 .active{
 	background: #000 !important;
 }
@@ -16,3 +19,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
