--- a/src/app/auth/exco/exco-login/exco-login.component.html
+++ b/src/app/auth/exco/exco-login/exco-login.component.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group d-flex justify-content-between">
                   <div class="form-check form-check-flat mt-0">
-                    <a routerLink="/exco/reset-password" class="text-black">Forgot Password</a>
+                    <a routerLink="/exco/forget-password" class="text-black">Forgot Password</a>
                   </div>
                   <!-- <a href="#" class="text-small forgot-password text-black">Forgot Password</a> -->
                 </div>
