--- a/src/app/getcount/getcount.component.html
+++ b/src/app/getcount/getcount.component.html
@@ -12,7 +12,7 @@
               <div class="card text-white">
                 <div class="card-body">
                   <div class="d-flex justify-content-between pb-2 align-items-center">
-                    <h2 class="font-weight-semibold mb-0">{{ counts?.userCount }}</h2>
+                    <h2 class="font-weight-semibold mb-0">{{ userCount? userCount : 0 }}</h2>
                     <div class="icon-holder">
                       <i class="mdi mdi-briefcase-outline"></i>
                     </div>
@@ -24,7 +24,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 grid-margin stretch-card average-price-card">
+            <!-- <div class="col-md-3 grid-margin stretch-card average-price-card">
               <div class="card text-white">
                 <div class="card-body">
                   <div class="d-flex justify-content-between pb-2 align-items-center">
@@ -38,7 +38,7 @@
                   </div>
                 </div>
               </div>
-            </div>            
+            </div>             -->
           </div>
         </div>
       </div>
