added a new component for id card export

--- a/src/app/admin/add-exco/add-exco.component.html
+++ b/src/app/admin/add-exco/add-exco.component.html
@@ -89,6 +89,13 @@
               <span class="menu-title">Verify Account</span>
             </a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/admin/export">
+              <i class="menu-icon typcn typcn-business-card"></i>
+              <span class="menu-title">Export Card</span>
+            </a>
+          </li>
   
           <li class="nav-item">
             <a class="nav-link" routerLink="/admin/profile">
