--- a/src/app/admin/export/export.component.html
+++ b/src/app/admin/export/export.component.html
@@ -62,7 +62,7 @@
 
             <li class="nav-item">
               <a class="nav-link" routerLink="/admin/view-agent">
-                <i class="menu-icon typcn typcn-eye"></i>
+                <i class="menu-icon typcn typcn-eye-outline"></i>
                 <span class="menu-title">View Agents</span>
               </a>
             </li>
@@ -75,7 +75,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" routerLink="/admin/excos">
+              <a class="nav-link" routerLink="/admin/excos">
                 <i class="menu-icon typcn typcn-eye-outline"></i>
                 <span class="menu-title">View Excos</span>
               </a>
@@ -89,7 +89,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="/admin/export">
+              <a class="nav-link active" routerLink="/admin/export">
                 <i class="menu-icon typcn typcn-business-card"></i>
                 <span class="menu-title">Export Card</span>
               </a>
@@ -97,7 +97,7 @@
 
             <li class="nav-item">
               <a class="nav-link" routerLink="/admin/profile">
-                <i class="menu-icon typcn typcn-profile"></i>
+                <i class="menu-icon typcn typcn-user"></i>
                 <span class="menu-title">Profile</span>
               </a>
             </li>
@@ -112,28 +112,34 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="row">
-                  <div class="col-md-6 grid-margin stretch-card average-price-card">
+                  
+                  <div class="col-md-3 grid-margin stretch-card average-price-card">
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
-                          <h2 class="font-weight-semibold mb-0">{{ counts?.agentCount}}</h2>
+                          <h2 class="font-weight-semibold mb-0">{{ counts?.userCount }}</h2>
                           <div class="icon-holder">
                             <i class="mdi mdi-briefcase-outline"></i>
                           </div>
                         </div>
                         <div class="d-flex justify-content-between">
-                          <h5 class="font-weight-semibold mb-0">Excos</h5>
+                          <h5 class="font-weight-semibold mb-0">Cards</h5>
                         </div>
                       </div>
                     </div>
                   </div>
+
+                  <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+                    <p style="color: white">Please Wait. </p>
+                  </ngx-spinner>
+
                   <div class="col-md-12 grid-margin">
                     <div class="card">
                       <div class="card-body">
                         <div class="d-flex justify-content-between">
-                          <h4 class="card-title mb-0">Excos</h4>
+                          <h4 class="card-title mb-0">Users</h4>
                         </div>
-                        <p>Registered Excos</p>
+                        <p>Registered Users</p>
 
                         <div class="row">
                           <button class="btn btn-secondary" (click)="exporter.exportTable('csv')">Csv</button> &nbsp;
@@ -149,50 +155,81 @@
 
                         <div class="example-container mat-elevation-z8">
 
-
-                          <mat-table  matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
+                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
 
                             <!-- Name Column -->
                             <ng-container matColumnDef="Name">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.name }} </mat-cell>
+                              <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.lastname}} </mat-cell>
                             </ng-container>
 
-                            <!-- Email Column -->
-                            <ng-container matColumnDef="Email">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
+                            <!-- UniqueID Column -->
+                            <ng-container matColumnDef="Unique ID">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header>Unique ID </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.uniqueId | uppercase}} </mat-cell>
                             </ng-container>
 
-                            <!-- DateAdded Column -->
-                            <ng-container matColumnDef="Added On">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Added On </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
-                            </ng-container>
-
-                            <!-- Status Column -->
-                            <ng-container matColumnDef="Status">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.is_active? 'Active' : 'Disabled' }} </mat-cell>
+                            <!-- ID Column -->
+                            <ng-container matColumnDef="ID No">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> ID No </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.verifiedId}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="Action">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> 
-                                <button class="btn badge {{row?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "openConfirmDialog(row?._id)">
-                                    {{row?.is_active? 'Deactivate' : 'Activate'}}
-                                  </button>
-                                  <button class="btn badge badge-danger" (click)="openConfirmationDialog(row?._id)">Delete</button>
-                                </mat-cell>
+                            <ng-container matColumnDef="Gender">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Gender </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.gender}} </mat-cell>
                             </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Image">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> Image Url </mat-header-cell>
+                                <mat-cell *matCellDef="let row"> {{row.image}} </mat-cell>
+                              </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Branch">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Branch </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.branch}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Zone">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Zone 
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.zone}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="State">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Unit">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Unit
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.unit}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="Issued On">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Date Issued </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
+                            </ng-container>                            
 
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: displayedColumns;">
                             </mat-row>
                           </mat-table>
 
-                          <mat-paginator [pageSizeOptions]="[20, 50, 100, 200]"></mat-paginator>
+                          <mat-paginator [pageSizeOptions]="[50, 100, 200, 500]"></mat-paginator>
+
+                           <!-- Row shown when there is no matching data. -->
+                          <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="4">No data matching the filter</td>
+                          </tr>
                         </div>
 
                       </div>
@@ -202,9 +239,6 @@
                 </div>
               </div>
             </div>
-            <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
-              <p style="color: white">Please wait... </p>
-            </ngx-spinner>
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
@@ -220,4 +254,4 @@
         <!-- main-panel ends -->
       </div>
       <!-- page-body-wrapper ends -->
-    </div><p>view-excos works!</p>
+    </div>
