--- a/src/app/admin/verify/verify.component.html
+++ b/src/app/admin/verify/verify.component.html
@@ -92,6 +92,13 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" routerLink="/admin/export">
+              <i class="menu-icon typcn typcn-business-card"></i>
+              <span class="menu-title">Export Card</span>
+            </a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" routerLink="/admin/profile">
               <i class="menu-icon typcn typcn-user"></i>
               <span class="menu-title">Profile</span>
